# oto-aliaser

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
